--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3.4'
+version: '1.0'
 
 services:
   samba:
-    image: dperson/samba
+    image: ifiht/samba
     environment:
       TZ: 'EST5EDT'
     networks:
